classDiagram
    class Owner {
        +String name
        +int available_minutes
        +dict preferences
        +list pets
        +add_pet(pet) None
        +get_available_time() int
        +get_all_tasks() list
    }

    class Pet {
        +String name
        +String species
        +int age
        +list special_needs
        +list tasks
        +add_task(task) None
        +has_special_needs() bool
        +get_task_list() list
    }

    class Task {
        +String title
        +int duration_minutes
        +String priority
        +String category
        +bool is_required
        +String notes
        +bool completed
        +String time_of_day
        +String recurrence
        +list recurrence_days
        +Pet pet
        +is_active_today(day_of_week) bool
        +mark_complete() None
        +is_high_priority() bool
        +get_summary() str
    }

    class Scheduler {
        +Owner owner
        +list tasks
        +int remaining_minutes
        +filter_by_status(tasks, include_completed) list
        +filter_by_pet(tasks, pet_name) list
        +filter_tasks(day_of_week, pet, include_completed) list
        +sort_by_time(tasks) list
        +rank_tasks(tasks) list
        +detect_conflicts(tasks) list
        +detect_time_conflicts(tasks) list
        +fits_in_budget(task) bool
        +generate_plan(day_of_week) DailyPlan
        +explain_plan(plan) str
    }

    class DailyPlan {
        +list scheduled_tasks
        +list skipped_tasks
        +int total_duration
        +String explanation
        +list conflicts
        +get_summary() str
        +display() None
    }

    Owner "1" --> "1..*" Pet : owns
    Pet "1" --> "0..*" Task : has
    Task --> Pet : backref
    Scheduler --> Owner : reads budget
    Scheduler --> Task : filters and ranks
    Scheduler --> DailyPlan : produces
